--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,62 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.decomposition import PCA"
+    "from sklearn.decomposition import PCA\n",
+    "import gdown\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train.arff already exists in (array([(b'-1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'-1', b'-1', b'1', b'1', b'-1', b'1', b'-1', b'1', b'-1', b'-1', b'-1', b'0', b'1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'-1', b'1', b'1', b'-1', b'-1'),\n",
+      "       (b'1', b'1', b'1', b'1', b'1', b'-1', b'0', b'1', b'-1', b'1', b'1', b'-1', b'1', b'0', b'-1', b'-1', b'1', b'1', b'0', b'1', b'1', b'1', b'1', b'-1', b'-1', b'0', b'-1', b'1', b'1', b'1', b'-1'),\n",
+      "       (b'1', b'0', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'-1', b'1', b'1', b'-1', b'1', b'0', b'-1', b'-1', b'-1', b'-1', b'0', b'1', b'1', b'1', b'1', b'1', b'-1', b'1', b'-1', b'1', b'0', b'-1', b'-1'),\n",
+      "       ...,\n",
+      "       (b'1', b'-1', b'1', b'1', b'1', b'-1', b'1', b'-1', b'-1', b'1', b'1', b'1', b'1', b'0', b'-1', b'-1', b'1', b'1', b'0', b'1', b'1', b'1', b'1', b'1', b'1', b'1', b'-1', b'1', b'0', b'1', b'-1'),\n",
+      "       (b'-1', b'-1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'1', b'-1', b'1', b'1', b'-1', b'-1', b'1', b'-1', b'1', b'1', b'0', b'-1', b'1', b'-1', b'1', b'1', b'1', b'1', b'-1', b'1', b'1', b'1', b'-1'),\n",
+      "       (b'-1', b'-1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'1', b'1', b'1', b'1', b'-1', b'-1', b'0', b'-1', b'1', b'1', b'0', b'1', b'1', b'1', b'1', b'-1', b'1', b'-1', b'-1', b'-1', b'1', b'-1', b'-1')],\n",
+      "      dtype=[('having_IP_Address', 'S2'), ('URL_Length', 'S2'), ('Shortining_Service', 'S2'), ('having_At_Symbol', 'S2'), ('double_slash_redirecting', 'S2'), ('Prefix_Suffix', 'S2'), ('having_Sub_Domain', 'S2'), ('SSLfinal_State', 'S2'), ('Domain_registeration_length', 'S2'), ('Favicon', 'S2'), ('port', 'S2'), ('HTTPS_token', 'S2'), ('Request_URL', 'S2'), ('URL_of_Anchor', 'S2'), ('Links_in_tags', 'S2'), ('SFH', 'S2'), ('Submitting_to_email', 'S2'), ('Abnormal_URL', 'S2'), ('Redirect', 'S1'), ('on_mouseover', 'S2'), ('RightClick', 'S2'), ('popUpWidnow', 'S2'), ('Iframe', 'S2'), ('age_of_domain', 'S2'), ('DNSRecord', 'S2'), ('web_traffic', 'S2'), ('Page_Rank', 'S2'), ('Google_Index', 'S2'), ('Links_pointing_to_page', 'S2'), ('Statistical_report', 'S2'), ('Result', 'S2')]), Dataset: phishing\n",
+      "\thaving_IP_Address's type is nominal, range is ('-1', '1')\n",
+      "\tURL_Length's type is nominal, range is ('1', '0', '-1')\n",
+      "\tShortining_Service's type is nominal, range is ('1', '-1')\n",
+      "\thaving_At_Symbol's type is nominal, range is ('1', '-1')\n",
+      "\tdouble_slash_redirecting's type is nominal, range is ('-1', '1')\n",
+      "\tPrefix_Suffix's type is nominal, range is ('-1', '1')\n",
+      "\thaving_Sub_Domain's type is nominal, range is ('-1', '0', '1')\n",
+      "\tSSLfinal_State's type is nominal, range is ('-1', '1', '0')\n",
+      "\tDomain_registeration_length's type is nominal, range is ('-1', '1')\n",
+      "\tFavicon's type is nominal, range is ('1', '-1')\n",
+      "\tport's type is nominal, range is ('1', '-1')\n",
+      "\tHTTPS_token's type is nominal, range is ('-1', '1')\n",
+      "\tRequest_URL's type is nominal, range is ('1', '-1')\n",
+      "\tURL_of_Anchor's type is nominal, range is ('-1', '0', '1')\n",
+      "\tLinks_in_tags's type is nominal, range is ('1', '-1', '0')\n",
+      "\tSFH's type is nominal, range is ('-1', '1', '0')\n",
+      "\tSubmitting_to_email's type is nominal, range is ('-1', '1')\n",
+      "\tAbnormal_URL's type is nominal, range is ('-1', '1')\n",
+      "\tRedirect's type is nominal, range is ('0', '1')\n",
+      "\ton_mouseover's type is nominal, range is ('1', '-1')\n",
+      "\tRightClick's type is nominal, range is ('1', '-1')\n",
+      "\tpopUpWidnow's type is nominal, range is ('1', '-1')\n",
+      "\tIframe's type is nominal, range is ('1', '-1')\n",
+      "\tage_of_domain's type is nominal, range is ('-1', '1')\n",
+      "\tDNSRecord's type is nominal, range is ('-1', '1')\n",
+      "\tweb_traffic's type is nominal, range is ('-1', '0', '1')\n",
+      "\tPage_Rank's type is nominal, range is ('-1', '1')\n",
+      "\tGoogle_Index's type is nominal, range is ('1', '-1')\n",
+      "\tLinks_pointing_to_page's type is nominal, range is ('1', '0', '-1')\n",
+      "\tStatistical_report's type is nominal, range is ('-1', '1')\n",
+      "\tResult's type is nominal, range is ('-1', '1')\n",
+      ")\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -228,13 +276,23 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Read in data\n",
+    "data_path = Path(\"data\")\n",
+    "file_path = data_path / \"train.arff\"\n",
+    "    \n",
+    "if file_path.exists():\n",
+    "    print(f\"train.arff already exists in {str(data)}\")\n",
+    "else:\n",
+    "    data_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    print(f\"Downloading train.arff...\")\n",
+    "    gdown.download('https://drive.google.com/uc?id=1qlvpqMu3Rm37wFCTbrQME8w-Xcbr0Psa', str(file_path), quiet=False)\n",
     "\n",
     "data = arff.loadarff('./data/train.arff')\n",
     "df = pandas.DataFrame(data[0])\n",
@@ -248,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +315,7 @@
        "(11055, 31)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +656,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +687,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +805,7 @@
        "        <Axes: >, <Axes: >]], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -770,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -815,20 +873,27 @@
    "source": [
     "# Split the data into training and testing and save to csv\n",
     "\n",
-    "df.to_csv('./data/normal/full.csv', index=False)\n",
+    "normal_path = data_path / \"normal\"\n",
+    "normal_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "full_path = normal_path / \"full.csv\"\n",
+    "train_path = normal_path / \"train.csv\"\n",
+    "test_path = normal_path / \"test.csv\"\n",
+    "\n",
+    "df.to_csv( str(full_path), index=False)\n",
     "\n",
     "train, test = train_test_split(df, test_size=0.15, random_state=42)\n",
     "\n",
     "train['Result'].hist()\n",
     "test['Result'].hist()\n",
     "\n",
-    "train.to_csv('./data/normal/train.csv', index=False)\n",
-    "test.to_csv('./data/normal/test.csv', index=False)"
+    "train.to_csv(str(train_path), index=False)\n",
+    "test.to_csv(str(test_path), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -846,6 +911,12 @@
    ],
    "source": [
     "# Data with pca\n",
+    "pca_path = data_path / \"pca\"\n",
+    "pca_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "full_path = pca_path / \"full.csv\"\n",
+    "train_path = pca_path / \"train.csv\"\n",
+    "test_path = pca_path / \"test.csv\"\n",
     "\n",
     "X = df.drop('Result', axis=1)\n",
     "Y = df['Result']\n",
@@ -866,18 +937,18 @@
     "pca_df = pandas.DataFrame(pca_np)\n",
     "pca_df['Result'] = Y.reset_index(drop=True)\n",
     "\n",
-    "pca_df.to_csv('./data/pca/full.csv', index=False)\n",
+    "pca_df.to_csv(str(full_path), index=False)\n",
     "\n",
     "train, test = train_test_split(pca_df, test_size=0.15, random_state=42)\n",
     "\n",
-    "train.to_csv('./data/pca/train.csv', index=False)\n",
-    "test.to_csv('./data/pca/test.csv', index=False)"
+    "train.to_csv(str(train_path), index=False)\n",
+    "test.to_csv(str(test_path), index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -891,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
