Update folder structure

--- a/src/DT.ipynb
+++ b/src/DT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import training and testing data\n",
-    "full = pd.read_csv('./data/normal/full.csv')\n",
-    "train = pd.read_csv('./data/normal/train.csv')\n",
-    "test = pd.read_csv('./data/normal/test.csv')\n",
+    "full = pd.read_csv('../data/normal/full.csv')\n",
+    "train = pd.read_csv('../data/normal/train.csv')\n",
+    "test = pd.read_csv('../data/normal/test.csv')\n",
     "\n",
-    "full_pca = pd.read_csv('./data/pca/full.csv')\n",
-    "train_pca = pd.read_csv('./data/pca/train.csv')\n",
-    "test_pca = pd.read_csv('./data/pca/test.csv')\n",
+    "full_pca = pd.read_csv('../data/pca/full.csv')\n",
+    "train_pca = pd.read_csv('../data/pca/train.csv')\n",
+    "test_pca = pd.read_csv('../data/pca/test.csv')\n",
     "\n",
     "# Drop the target column from the training data\n",
     "X_train = train.drop('Result', axis=1)\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
