--- a/src/preprocess.ipynb
+++ b/src/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,53 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train.arff already exists in (array([(b'-1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'-1', b'-1', b'1', b'1', b'-1', b'1', b'-1', b'1', b'-1', b'-1', b'-1', b'0', b'1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'-1', b'1', b'1', b'-1', b'-1'),\n",
-      "       (b'1', b'1', b'1', b'1', b'1', b'-1', b'0', b'1', b'-1', b'1', b'1', b'-1', b'1', b'0', b'-1', b'-1', b'1', b'1', b'0', b'1', b'1', b'1', b'1', b'-1', b'-1', b'0', b'-1', b'1', b'1', b'1', b'-1'),\n",
-      "       (b'1', b'0', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'-1', b'1', b'1', b'-1', b'1', b'0', b'-1', b'-1', b'-1', b'-1', b'0', b'1', b'1', b'1', b'1', b'1', b'-1', b'1', b'-1', b'1', b'0', b'-1', b'-1'),\n",
-      "       ...,\n",
-      "       (b'1', b'-1', b'1', b'1', b'1', b'-1', b'1', b'-1', b'-1', b'1', b'1', b'1', b'1', b'0', b'-1', b'-1', b'1', b'1', b'0', b'1', b'1', b'1', b'1', b'1', b'1', b'1', b'-1', b'1', b'0', b'1', b'-1'),\n",
-      "       (b'-1', b'-1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'1', b'-1', b'1', b'1', b'-1', b'-1', b'1', b'-1', b'1', b'1', b'0', b'-1', b'1', b'-1', b'1', b'1', b'1', b'1', b'-1', b'1', b'1', b'1', b'-1'),\n",
-      "       (b'-1', b'-1', b'1', b'1', b'1', b'-1', b'-1', b'-1', b'1', b'1', b'1', b'1', b'-1', b'-1', b'0', b'-1', b'1', b'1', b'0', b'1', b'1', b'1', b'1', b'-1', b'1', b'-1', b'-1', b'-1', b'1', b'-1', b'-1')],\n",
-      "      dtype=[('having_IP_Address', 'S2'), ('URL_Length', 'S2'), ('Shortining_Service', 'S2'), ('having_At_Symbol', 'S2'), ('double_slash_redirecting', 'S2'), ('Prefix_Suffix', 'S2'), ('having_Sub_Domain', 'S2'), ('SSLfinal_State', 'S2'), ('Domain_registeration_length', 'S2'), ('Favicon', 'S2'), ('port', 'S2'), ('HTTPS_token', 'S2'), ('Request_URL', 'S2'), ('URL_of_Anchor', 'S2'), ('Links_in_tags', 'S2'), ('SFH', 'S2'), ('Submitting_to_email', 'S2'), ('Abnormal_URL', 'S2'), ('Redirect', 'S1'), ('on_mouseover', 'S2'), ('RightClick', 'S2'), ('popUpWidnow', 'S2'), ('Iframe', 'S2'), ('age_of_domain', 'S2'), ('DNSRecord', 'S2'), ('web_traffic', 'S2'), ('Page_Rank', 'S2'), ('Google_Index', 'S2'), ('Links_pointing_to_page', 'S2'), ('Statistical_report', 'S2'), ('Result', 'S2')]), Dataset: phishing\n",
-      "\thaving_IP_Address's type is nominal, range is ('-1', '1')\n",
-      "\tURL_Length's type is nominal, range is ('1', '0', '-1')\n",
-      "\tShortining_Service's type is nominal, range is ('1', '-1')\n",
-      "\thaving_At_Symbol's type is nominal, range is ('1', '-1')\n",
-      "\tdouble_slash_redirecting's type is nominal, range is ('-1', '1')\n",
-      "\tPrefix_Suffix's type is nominal, range is ('-1', '1')\n",
-      "\thaving_Sub_Domain's type is nominal, range is ('-1', '0', '1')\n",
-      "\tSSLfinal_State's type is nominal, range is ('-1', '1', '0')\n",
-      "\tDomain_registeration_length's type is nominal, range is ('-1', '1')\n",
-      "\tFavicon's type is nominal, range is ('1', '-1')\n",
-      "\tport's type is nominal, range is ('1', '-1')\n",
-      "\tHTTPS_token's type is nominal, range is ('-1', '1')\n",
-      "\tRequest_URL's type is nominal, range is ('1', '-1')\n",
-      "\tURL_of_Anchor's type is nominal, range is ('-1', '0', '1')\n",
-      "\tLinks_in_tags's type is nominal, range is ('1', '-1', '0')\n",
-      "\tSFH's type is nominal, range is ('-1', '1', '0')\n",
-      "\tSubmitting_to_email's type is nominal, range is ('-1', '1')\n",
-      "\tAbnormal_URL's type is nominal, range is ('-1', '1')\n",
-      "\tRedirect's type is nominal, range is ('0', '1')\n",
-      "\ton_mouseover's type is nominal, range is ('1', '-1')\n",
-      "\tRightClick's type is nominal, range is ('1', '-1')\n",
-      "\tpopUpWidnow's type is nominal, range is ('1', '-1')\n",
-      "\tIframe's type is nominal, range is ('1', '-1')\n",
-      "\tage_of_domain's type is nominal, range is ('-1', '1')\n",
-      "\tDNSRecord's type is nominal, range is ('-1', '1')\n",
-      "\tweb_traffic's type is nominal, range is ('-1', '0', '1')\n",
-      "\tPage_Rank's type is nominal, range is ('-1', '1')\n",
-      "\tGoogle_Index's type is nominal, range is ('1', '-1')\n",
-      "\tLinks_pointing_to_page's type is nominal, range is ('1', '0', '-1')\n",
-      "\tStatistical_report's type is nominal, range is ('-1', '1')\n",
-      "\tResult's type is nominal, range is ('-1', '1')\n",
-      ")\n"
+      "Downloading train.arff...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1qlvpqMu3Rm37wFCTbrQME8w-Xcbr0Psa\n",
+      "To: /home/klairgo/Documents/University/Semester 2/COS781/Assignments/Project/code/data/train.arff\n",
+      "100%|██████████| 801k/801k [00:00<00:00, 818kB/s]\n"
      ]
     },
     {
@@ -276,25 +247,25 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Read in data\n",
-    "data_path = Path(\"data\")\n",
+    "data_path = Path(\"../data\")\n",
     "file_path = data_path / \"train.arff\"\n",
     "    \n",
     "if file_path.exists():\n",
-    "    print(f\"train.arff already exists in {str(data)}\")\n",
+    "    print(f\"train.arff already exists in {str(data_path)}\")\n",
     "else:\n",
     "    data_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    print(f\"Downloading train.arff...\")\n",
     "    gdown.download('https://drive.google.com/uc?id=1qlvpqMu3Rm37wFCTbrQME8w-Xcbr0Psa', str(file_path), quiet=False)\n",
     "\n",
-    "data = arff.loadarff('./data/train.arff')\n",
+    "data = arff.loadarff(str(file_path))\n",
     "df = pandas.DataFrame(data[0])\n",
     "\n",
     "# Convert to utf-0\n",
@@ -306,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +286,7 @@
        "(11055, 31)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +627,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +658,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -711,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +776,7 @@
        "        <Axes: >, <Axes: >]], dtype=object)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -828,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
