--- a/src/DT.ipynb
+++ b/src/DT.ipynb
@@ -241,7 +241,7 @@
     "dot_data = tree.export_graphviz(clf, out_file=None, feature_names=X_train.columns, class_names=['0', '1'], filled=True, rounded=True, special_characters=True)\n",
     "\n",
     "graph = pydotplus.graph_from_dot_data(dot_data)\n",
-    "graph.write_pdf(\"./tree_gini.pdf\")"
+    "graph.write_pdf(\"../tree_gini.pdf\")"
    ]
   }
  ],
