Added comments and update README

--- a/src/DT.ipynb
+++ b/src/DT.ipynb
@@ -97,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grid search comparing splitting criterion and the maximum depth of a tree."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -176,6 +183,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K-fold validation to get accuracy, recall, precision, and f1-score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -214,6 +228,13 @@
     "print(f\"PCA Dataset Recall: {recall}\")\n",
     "print(f\"PCA Dataset F1: {f1}\")\n",
     "print(f\"PCA Dataset: {np.mean(test_accuracy)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot the tree to a pdf file."
    ]
   },
   {
